--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
      <p>Placeholder</p>
      <h3>Contact Info</h3>
       <ul>
-        <li>Email me: <a href= "mailto: owenedwards422@gmail.com">owenedwards422@gmail.com</a></li>
-        <li>Github: <a href= "https://github.com/Ivyparade">Ivyparade</a></li>
-        <li>Portfolio: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Where I hid the bodies</a></li>
+        <li><strong>Email me:</strong> <a href= "mailto: owenedwards422@gmail.com">owenedwards422@gmail.com</a></li>
+        <li><strong>GitHub: </strong> <a href= "#">Ivyparade</a></li>
+        <li><strong>Portfolio: </strong> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Where I hid the bodies</a></li>
       </ul>
    </div>
 
