--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <h3><strong>Owen Edwards</strong></h3>
      <img src="http://placehold.it/200x200" alt = "My Mug">
      <br>
-     <p>Placeholder</p>
+     <p class= "bio">Placeholder</p>
      <h3>Contact Info</h3>
       <ul>
         <li><strong>Email me:</strong> <a href= "mailto: owenedwards422@gmail.com">owenedwards422@gmail.com</a></li>
